@startuml Database ER Diagram - Simplified Payment API

' Entidades principais baseadas nas regras de negócio e plano de desenvolvimento

entity User {
  * id : BIGINT AUTO_INCREMENT
  --
  name : VARCHAR(255) NOT NULL
  cpf_cnpj : VARCHAR(14) NULL UNIQUE
  email : VARCHAR(255) UNIQUE NOT NULL
  password : VARCHAR(255) NOT NULL
  type : ENUM('common', 'merchant') NOT NULL DEFAULT 'common'
  balance : BIGINT DEFAULT 0
  remember_token : VARCHAR(100) NULL
  created_at : TIMESTAMP DEFAULT CURRENT_TIMESTAMP
  updated_at : TIMESTAMP DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP
}

entity Transaction {
  * id : BIGINT AUTO_INCREMENT
  --
  payer_id : BIGINT NOT NULL
  payee_id : BIGINT NOT NULL
  value : BIGINT NOT NULL
  status : ENUM('pending', 'approved', 'rejected', 'failed') DEFAULT 'pending'
  correlation_id : VARCHAR(36) UNIQUE
  created_at : TIMESTAMP DEFAULT CURRENT_TIMESTAMP
  updated_at : TIMESTAMP DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP
}

entity Notification {
  * id : BIGINT AUTO_INCREMENT
  --
  transaction_id : BIGINT NOT NULL
  user_id : BIGINT NOT NULL
  type : ENUM('email', 'sms') NOT NULL
  status : ENUM('queued', 'sent', 'failed') DEFAULT 'queued'
  message : TEXT NULL
  sent_at : TIMESTAMP NULL
  created_at : TIMESTAMP DEFAULT CURRENT_TIMESTAMP
  updated_at : TIMESTAMP DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP
}

entity AuditLog {
  * id : BIGINT AUTO_INCREMENT
  --
  user_id : BIGINT NULL
  transaction_id : BIGINT NULL
  action : VARCHAR(255) NOT NULL
  details : JSON NULL
  ip_address : VARCHAR(45) NULL
  user_agent : TEXT NULL
  timestamp : TIMESTAMP NOT NULL
  created_at : TIMESTAMP DEFAULT CURRENT_TIMESTAMP
  updated_at : TIMESTAMP DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP
}

entity Event {
  * _id : ObjectId
  --
  type : String
  data : JSON
  correlation_id : String
  timestamp : TIMESTAMP
}

' Relacionamentos
User ||--o{ Transaction : "payer"
User ||--o{ Transaction : "payee"
User ||--o{ Notification
User ||--o{ AuditLog
Transaction ||--o{ Notification
Transaction ||--o{ AuditLog
Transaction ||--o{ Event : "generates"

note right of Event : MongoDB Collection: events\nAppend-only, immutable events for event sourcing

' Índices sugeridos
note right of User : Índices: cpf_cnpj, email, (type, balance)
note right of Transaction : Índices: payer_id, payee_id, (status, created_at), correlation_id
note right of Notification : Índices: (transaction_id, user_id, status)
note right of AuditLog : Índices: (user_id, action, timestamp), (transaction_id, timestamp)
note right of Event : Índices: correlation_id, type, timestamp

@enduml